--- a/internal-page.html
+++ b/internal-page.html
@@ -229,7 +229,7 @@
                 <div class="title-outer">
                     <h1 class="title">Visa Details</h1>
                     <ul class="page-breadcrumb">
-                        <li><a href="index.html">Home</a><i class="bi bi-caret-down-fill"></i></li>
+                        <li><a href="index.html">Home</a><i class="bi bi-caret-right-fill"></i></li>
                         <li>Country</li>
                     </ul>
                 </div>
@@ -274,6 +274,27 @@
                 </div>
             </div>
         </section>
+        <section class="services-details">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12">
+                        <div class="services-details__content"> 
+                            <h2 class="mt-4">Visa Overview</h2>
+                            <p>Lorem ipsum is simply free text used by copytyping refreshing. Neque porro est qui
+                                dolorem ipsum quia quaed inventore veritatis et quasi architecto beatae vitae dicta sunt
+                                explicabo. Aelltes port lacus quis enim var sed efficitur turpis gilla sed sit amet
+                                finibus eros. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                Lorem Ipsum has been the ndustry standard dummy text ever since the 1500s, when an
+                                unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            <p>When an unknown printer took a galley of type and scrambled it to make a type specimen
+                                book. It has survived not only five centuries, but also the leap into electronic
+                                typesetting, remaining essentially unchanged. </p>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="countries-section-three">
             <div class="anim-icons">
                 <span class="icon icon-object-1"></span>
@@ -284,7 +305,7 @@
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
-                                    <div class="flag"><img src="" alt=""></div>
+                                    <div class="flag"><img src="assets/img/internal-page/icons8-airplane-100.png" class="flag-icon-mini" alt=""></div>
                                     <h5 class="title">Good Character
                                         Clean Criminal Record
                                         No Visa Refusals </h5>
@@ -294,7 +315,7 @@
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
-                                    <div class="flag"><img src="images/resource/flag-usa.jpg" alt=""></div>
+                                    <div class="flag"><img src="assets/img/internal-page/icons8-family-100.png" class="flag-icon-mini" alt=""></div>
                                     <h5 class="title"> Include Full Family
                                         Dependent Parents 65y +
                                         Dependent Children to 30y</h5>
@@ -304,7 +325,7 @@
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
-                                    <div class="flag"><img src="images/resource/flag-dub.jpg" alt=""></div>
+                                    <div class="flag"><img src="assets/img/internal-page/icons8-home-64.png" class="flag-icon-mini" alt=""></div>
                                     <h5 class="title">No Minimum Stay
                                         No Language Test</h5>
                                 </div>
@@ -313,7 +334,7 @@
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
-                                    <div class="flag"><img src="images/resource/flag-la.jpg" alt=""></div>
+                                    <div class="flag"><img src="assets/img/internal-page/icons8-passport-100.png" class="flag-icon-mini" alt=""></div>
                                     <h5 class="title">ID & Proof of Funds
                                         Birth Certificate
                                         Financial Records</h5>
@@ -323,7 +344,7 @@
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
-                                    <div class="flag"><img src="images/resource/flag-in.jpg" alt=""></div>
+                                    <div class="flag"><img src="assets/img/internal-page/icons8-airplane-100.png" class="flag-icon-mini" alt=""></div>
                                     <h5 class="title">ID & Proof of Funds
                                         Birth Certificate
                                         Financial Records</h5>
@@ -333,7 +354,7 @@
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
-                                    <div class="flag"><img src="images/resource/flag-turkey.jpg" alt=""></div>
+                                    <div class="flag"><img src="assets/img/internal-page/icons8-family-100.png" class="flag-icon-mini" alt=""></div>
                                     <h5 class="title">ID & Proof of Funds
                                         Birth Certificate
                                         Financial Records</h5>
@@ -348,17 +369,21 @@
             <div class="container">
                 <div class="block icon-items-list ">
                     <div class="row pt-3 pb-3">
-                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <span class="icon-dollar"></span>
-                            <p itemprop="name">From $100,000 Donation </p>
+                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <img
+                                src="assets/img/internal-page/icons8-airplane-100.png" class="internal-icon" alt="">
+                            <p >From $100,000 Donation </p>
                         </div>
-                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <span class="icon-feature-house-alt"></span>
-                            <p itemprop="name">From $200,000 Real Estate </p>
+                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <img
+                                src="assets/img/internal-page/icons8-family-100.png" class="internal-icon" alt="">
+                            <p >From $200,000 Real Estate </p>
                         </div>
-                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <span class="icon-feature-family"></span>
-                            <p itemprop="name">Full Family </p>
+                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <img
+                                src="assets/img/internal-page/icons8-home-64.png" class="internal-icon" alt="">
+                            <p >rom $200,000 Real Estate</p>
                         </div>
-                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <span class="icon-feature-passport"></span>
-                            <p itemprop="name">Dominica Visa Free Travel 153 Countries </p>
+                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <img
+                                src="assets/img/internal-page/icons8-passport-100.png" class="internal-icon" alt="">
+                            <p >Dominica Visa Free Travel 153 Countries </p>
                         </div>
                     </div>
                 </div>
@@ -370,7 +395,7 @@
                 <div class="row">
                     <div class="col-xl-12 col-lg-12">
                         <div class="services-details__content">
-                            <img src="images/resource/service-details.jpg" alt="" />
+                            <img src="assets/img/banner/dominica.webp" alt="" />
                             <h2 class="mt-4">Visa Overview</h2>
                             <p>Lorem ipsum is simply free text used by copytyping refreshing. Neque porro est qui
                                 dolorem ipsum quia quaed inventore veritatis et quasi architecto beatae vitae dicta sunt
@@ -392,7 +417,7 @@
                                     <div class="row clearfix">
                                         <div class="col-lg-6 col-md-6 col-sm-12 column">
                                             <div class="single-item">
-                                                <div class="icon-box"><i class="fas fa-check-circle"></i></div>
+                                                <div class="icon-box"></div>
                                                 <h6 class="title">Entering & Leaving From Country</h6>
                                             </div>
                                         </div>
@@ -435,6 +460,76 @@
                 </div>
             </div>
         </section>
+        <section class="open-country">
+            <div class="container">
+                <div class="row">
+                    <div class="country-list-main"
+                        style="background-image:url(assets/img/internal-page/country-bg.png);">
+                        <div class="title-head">
+                            <h2>أكثر من 147 دولة تُسمح لمواطني سانت لوسيا بالدخول إليها بدون تأشيرة</h2>
+                        </div>
+                        <div class="country-list-visa">
+                            <div class="country-visa">
+                                <h4>أوروبا</h4>
+                                <div>
+                                    <h5>فرنسا</h5>
+                                    <h5>ألمانيا</h5>
+                                    <h5>إيطاليا</h5>
+                                    <h5>اليونان</h5>
+                                    <h5>بلجيكا</h5>
+                                    <h5> دوله +37 </h5>
+                                </div>
+                            </div>
+                            <div class="country-visa">
+                                <h4>أفريقيا</h4>
+                                <div>
+                                    <h5>بوتسوانا</h5>
+                                    <h5>كينيا</h5>
+                                    <h5>مدغشقر</h5>
+                                    <h5>ملاوي</h5>
+                                    <h5>غامبيا</h5>
+                                    <h5> دوله +23 </h5>
+                                </div>
+                            </div>
+                            <div class="country-visa">
+                                <h4> دول البحر سانت لوسيا </h4>
+                                <div>
+                                    <h5>جامايكا</h5>
+                                    <h5> شارع لوسيا</h5>
+                                    <h5>مونتسيرات</h5>
+                                    <h5> سانت كيتس ونيفيس</h5>
+                                    <h5> سانت مارتن</h5>
+                                    <h5> دوله +8 </h5>
+                                </div>
+                            </div>
+                            <div class="country-visa">
+                                <h4>الأمريكيتين</h4>
+                                <div>
+                                    <h5>البرازيل</h5>
+                                    <h5>كولومبيا</h5>
+                                    <h5>أوروغواي</h5>
+                                    <h5>تشيلي</h5>
+                                    <h5>بوليفيا</h5>
+                                    <h5> دوله +23 </h5>
+                                </div>
+                            </div>
+                            <div class="country-visa">
+                                <h4>آسيا</h4>
+                                <div>
+                                    <h5>نيبال</h5>
+                                    <h5>جزر المالديف</h5>
+                                    <h5>سيريلانكا</h5>
+                                    <h5> كوريا الجنوبية
+                                    </h5>
+                                    <h5>تايوان</h5>
+                                    <h5> دوله +18 </h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section>
             <div class="container">
                 <div class="row">
@@ -447,7 +542,7 @@
                             <!--Block-->
                             <li class="accordion block">
                                 <div class="acc-btn">Is my technology allowed on tech?
-                                    <div class="icon bi bi-caret-down-fill"></div>
+                                    <div class="icon bi bi-caret-right-fill"></div>
                                 </div>
                                 <div class="acc-content">
                                     <div class="content">
@@ -460,7 +555,7 @@
                             <!--Block-->
                             <li class="accordion block active-block">
                                 <div class="acc-btn active">How to soft launch your business?
-                                    <div class="icon bi bi-caret-down-fill"></div>
+                                    <div class="icon bi bi-caret-right-fill"></div>
                                 </div>
                                 <div class="acc-content current">
                                     <div class="content">
@@ -473,7 +568,7 @@
                             <!--Block-->
                             <li class="accordion block">
                                 <div class="acc-btn">How to turn visitors into contributors
-                                    <div class="icon bi bi-caret-down-fill"></div>
+                                    <div class="icon bi bi-caret-right-fill"></div>
                                 </div>
                                 <div class="acc-content">
                                     <div class="content">
@@ -486,7 +581,7 @@
                             <!--Block-->
                             <li class="accordion block">
                                 <div class="acc-btn">How can i find my solutions?
-                                    <div class="icon bi bi-caret-down-fill"></div>
+                                    <div class="icon bi bi-caret-right-fill"></div>
                                 </div>
                                 <div class="acc-content">
                                     <div class="content">
