--- a/about-us.html
+++ b/about-us.html
@@ -235,7 +235,7 @@
 				<div class="title-outer">
 					<h1 class="title">About Us</h1>
 					<ul class="page-breadcrumb">
-						<li><a href="index.html">Home</a><i class="bi bi-caret-down-fill"></i></li>
+						<li><a href="index.html">Home</a><i class="bi bi-caret-right-fill"></i></li>
 						<li>About</li>
 					</ul>
 				</div>
