--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                                 <!--Block-->
                                 <li class="accordion block">
                                     <div class="acc-btn">How to get free immigration?
-                                        <div class="icon bi bi-caret-down-fill"></div>
+                                        <div class="icon bi bi-caret-right-fill"></div>
                                     </div>
                                     <div class="acc-content">
                                         <div class="content">
@@ -626,7 +626,7 @@
                                 <!--Block-->
                                 <li class="accordion block active-block">
                                     <div class="acc-btn active">Which country is good for residents?
-                                        <div class="icon bi bi-caret-down-fill"></div>
+                                        <div class="icon bi bi-caret-right-fill"></div>
                                     </div>
                                     <div class="acc-content current">
                                         <div class="content">
@@ -638,7 +638,7 @@
                                 <!--Block-->
                                 <li class="accordion block">
                                     <div class="acc-btn">Canada study visa requirements?
-                                        <div class="icon bi bi-caret-down-fill"></div>
+                                        <div class="icon bi bi-caret-right-fill"></div>
                                     </div>
                                     <div class="acc-content">
                                         <div class="content">
