--- a/partner.html
+++ b/partner.html
@@ -234,7 +234,7 @@
         <div class="title-outer">
             <h1 class="title">Our Partners</h1>
             <ul class="page-breadcrumb">
-                <li><a href="index.html">Home</a><i class="bi bi-caret-down-fill"></i></li> 
+                <li><a href="index.html">Home</a><i class="bi bi-caret-right-fill"></i></li> 
                 <li>Partners</li>
             </ul>
         </div>
